# stm32f469i-disco

./: .gdbinit  Cargo.toml  README.md  memory.x
.cargo/: config
examples/: leds_on.rs  watchdog.rs
src/: leds.rs  lib.rs
